attempt to fix zooming on mobile

--- a/client/src/styles/MapKitMap.css
+++ b/client/src/styles/MapKitMap.css
@@ -1,11 +1,13 @@
 .map {
     width: 800px;
     height: 500px;
+    touch-action: manipulation;
+    -webkit-overflow-scrolling: touch;
 }
 
 @media (max-width: 768px) {
     .map {
         width: 100%;
-        height: 275px;
+        height: 350px;
     }
 }
